--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - SECRET_KEY=${DJANGO_SECRET_KEY}
     depends_on:
       - db
+      - redis
   db:
     image: postgres:13-alpine
     volumes:
@@ -30,6 +31,36 @@ services:
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASS}
+  redis:
+    image: redis:alpine
+  celery:
+    build:
+      context: .
+    command: celery -A app.celery worker -l info
+    volumes:
+      - ./app:/app
+    environment:
+      - DB_HOST=db
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - SECRET_KEY=${DJANGO_SECRET_KEY}
+    depends_on:
+      - redis
+  celery-beat:
+    build:
+      context: .
+    command: celery -A app.celery beat -l info
+    volumes:
+      - ./app:/app
+    environment:
+      - DB_HOST=db
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - SECRET_KEY=${DJANGO_SECRET_KEY}
+    depends_on:
+      - redis
 
 
 volumes:
